# Strava-Agent

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/: ChatContainer.tsx  MessageInput.tsx  MessageList.tsx  Sidebar.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: api.ts  index.ts
src/: .env.sample  coaching_agent.py  server.py
src/assets/: strava_auth.json
src/factories/: __init__.py  metrics.py  tools.py
src/models/: coaching.py  sessions.py  tools.py
src/routes/: coaching.py  sessions.py
src/services/: coaching_agent_service.py  session_service.py
src/setup/: dependencies.py
src/utils/: langchain.py
