[project]
name = "coaching-agent"
version = "0.1.0"
description = "A coaching agent powered by LangGraph and Anthropic"
readme = "README.md"
requires-python = ">=3.13"
authors = []
license = {text = "MIT"}
dependencies = [
    "uvicorn==0.44.0",
    "fastapi==0.136.0",
    "anthropic==0.96.0",
    "langchain==1.2.15",
    "langchain-openai==1.2.0",
    "langchain-core==1.3.0",
    "langgraph==1.1.7",
    "langgraph-checkpoint==4.0.2",
    "langgraph-prebuilt==1.0.9",
    "langgraph-sdk==0.3.13",
    "langsmith==0.7.32",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "stravalib==2.4",
    "pydantic==2.13.2",
    "pyyaml==6.0.3",
    "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"